this is to fix the buttons

--- a/src/Locales/en.json
+++ b/src/Locales/en.json
@@ -34,7 +34,12 @@
         "We deliver fresh vegetables & fruits at your doorstep. We deliver fresh vegetables & fruits at your doorstep.": "We deliver fresh vegetables & fruits at your doorstep. We deliver fresh vegetables & fruits at your doorstep.",
     
             "Vegetables at your doorstep": "Vegetables at your doorstep",
-            "Shop vegetables now": "Shop vegetables now"
+            "Shop vegetables now": "Shop vegetables now",
+            "Welcome to CamMarket": "Welcome to CamMarket",
+            "We deliver Fresh Vegetables & Fruits at your doorstep": "We deliver Fresh Vegetables & Fruits at your doorstep",
+            "© Copyright 2024 CamMarket, Inc.  All rights reserved": "© Copyright 2024 CamMarket, Inc.  All rights reserved"
+
+          
           
           
     
