--- a/src/Locales/fr.json
+++ b/src/Locales/fr.json
@@ -33,7 +33,12 @@
             "Fresh Vegetables & Fruits at your doorstep": "Légumes et fruits frais à votre porte",
             "We deliver fresh vegetables & fruits at your doorstep. We deliver fresh vegetables & fruits at your doorstep.": "Nous livrons des légumes et des fruits frais à votre porte. Nous livrons des légumes et des fruits frais à votre porte.",
             "Vegetables at your doorstep": "Légumes à votre porte",
-  "Shop vegetables now": "Achetez des légumes maintenant"
+  "Shop vegetables now": "Achetez des légumes maintenant",
+  "Welcome to CamMarket": "Bienvenue chez CamMarket",
+  "We deliver Fresh Vegetables & Fruits at your doorstep": "Nous livrons des légumes et des fruits frais à votre porte",
+  "© Copyright 2024 CamMarket, Inc.  All rights reserved": "© Droits d'auteur 2024 CamMarket, Inc. Tous droits réservés"
+
+
         
         
       
